# researcher-and-writer-articles-multiagents

./: README.md  pyproject.toml
outputs/: article.md
src/researcher_writer_agents/: crew.py  main.py
src/researcher_writer_agents/config/: agents.yaml  tasks.yaml
