[project]
name = "researcher_writer_agents"
version = "0.1.0"
description = "researcher-writer-agents using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "crewai[tools]>=0.121.0,<1.0.0"
]

[project.scripts]
researcher_writer_agents = "researcher_writer_agents.main:run"
run_crew = "researcher_writer_agents.main:run"
train = "researcher_writer_agents.main:train"
replay = "researcher_writer_agents.main:replay"
test = "researcher_writer_agents.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
